Carga y vista de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <title>Google Sign-In Demo</title>
 </head>
 <body>
+
+    <!-- <img src="http://localhost:3000/imagen/usuario/5fcfa05f90dbcb0425d276da-856.jpg?token=123456" alt=""> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
 
